Refactor and enhance event handling and configuration
Refactor the event handling and configuration across multiple components, including improving logging levels, adding fallback configurations, and enhancing shutdown and stop methods. Also, introduce new utility classes and fix some minor bugs.